# f1-analysis-tool

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: schema.sql
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/rest/: seasons.py  sessions.py
pipeline/: import_data.py  test_fastf1.py
tests/: conftest.py  test_seasons.py  test_sessions.py
