[project]
name = "f1-analysis-tool"
version = "0.1.0"
description = "F1 Race Analytics Platform - Data Engineering + Visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.109.0",
    "fastapi-health>=0.4.0",
    "uvicorn[standard]>=0.27.0",
    "fastf1>=3.3.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "pipeline", "ml", "frontend"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
